Fix calendar and images for ghpages

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,13 +22,13 @@
     <div class="container" style="margin-top: 35px;">
       <div class="row text-center">
         <div class="col-12 col-lg-6">
-          <img src="../../assets/images/volunteer-students.png" class="img-fluid">
+          <img src=".../../assets/images/volunteer-students.png" class="img-fluid">
           <div class="get-involved-button">
             <button class="btn btn-danger" style="margin-bottom: 25px;" onclick="window.open('https://drive.google.com/open?id=1O8yg_fP-CFzB6GJmgfJVs_K5WuZs926P')">Students</button>
           </div>
         </div>
         <div class="col-12 col-lg-6">
-          <img src="../../assets/images/volunteer-jake.png" class="img-fluid">
+          <img src=".../../assets/images/volunteer-jake.png" class="img-fluid">
           <div class="get-involved-button">
             <button class="btn btn-danger" onclick="window.open('https://drive.google.com/file/d/1D6A2t8ttX48y_cgJa-vjtcKpo_7wX0zJ')">Volunteers</button>
           </div>
@@ -40,7 +40,7 @@
 
 <section id="meetTheTeam">
   <div class="meet-team-container text-center">
-    <img src="../../assets/images/group-outdoor.png" class="img-fluid">
+    <img src=".../../assets/images/group-outdoor.png" class="img-fluid">
     <a routerLink="/team">
       <button class="btn meet-team-btn">Meet the Team</button>
     </a>
