--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-8">
         <a class="navbar-brand" routerLink="/home">
-          <img class="img-fluid" src="../../assets/images/Waypoint-Brand-White.png">
+          <img class="img-fluid" src=".../../assets/images/Waypoint-Brand-White.png">
         </a>
         <div class="white-text">
           <a href="https://www.google.com/maps/place/115+S+2nd+St,+West+Newton,+PA+15089/@40.2094993,-79.7698086,17z/data=!3m1!4b1!4m5!3m4!1s0x8834e0437beca705:0xef5cbeb5d1c666f3!8m2!3d40.2094952!4d-79.7676199"
