--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <a class="col-8 col-md-4" routerLink="/home" style="padding: 0;">
-    <img class="img-fluid" src="../../assets/images/Waypoint-Brand.png">
+    <img class="img-fluid" src=".../../assets/images/Waypoint-Brand.png">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
     aria-label="Toggle navigation">
