--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,11 +2,11 @@
   <a class="col-8 col-md-4" routerLink="/home" style="padding: 0;">
     <img class="img-fluid" src=".../../assets/images/Waypoint-Brand.png">
   </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-    aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" aria-controls="navbarNav" aria-expanded="false"
+    aria-label="Toggle navigation" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="navbar-collapse collapse" id="navbarNav">
+  <div class="navbar-collapse collapse" id="navbarNav" [ngbCollapse]="isCollapsed">
     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
       <li class="nav-item">
         <a class="nav-link" routerLink="/home">Home</a>
