--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -9,7 +9,7 @@
 
 .meet-team-btn {
   border: 1px solid rgba(255, 255, 255, 0.5);
-  background-color: #ff0000b8;
+  background-color: rgba(255, 0, 0, 0.8);
   color: white;
 }
 
