--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-8">
         <a class="navbar-brand" routerLink="/home">
-          <img class="img-fluid" src=".../../assets/images/Waypoint-Brand-White.png">
+          <img class="img-fluid w-100" src=".../../assets/images/Waypoint-Brand-White.png">
         </a>
         <div class="white-text">
           <a href="https://www.google.com/maps/place/115+S+2nd+St,+West+Newton,+PA+15089/@40.2094993,-79.7698086,17z/data=!3m1!4b1!4m5!3m4!1s0x8834e0437beca705:0xef5cbeb5d1c666f3!8m2!3d40.2094952!4d-79.7676199"
@@ -30,7 +30,7 @@
       </div>
       <hr class="clearfix w-100 d-lg-none">
       <div class="col-lg-4 float-right">
-        <h5 class="text-uppercase mb-4 mt-3 font-weight-bold white-text">Directory</h5>
+        <h5 class="text-uppercase mb-4 mt-3 font-weight-bold white-text">Navigate</h5>
         <ul class="list-unstyled">
           <li>
             <a routerLink="/home" class="white-text">Home</a>
@@ -76,6 +76,6 @@
   </div>
   <hr>
   <div class="footer-copyright py-3 text-center white-text">
-    <span class="current-year"></span> Waypoint Youth & Community Center
+    © {{year}} Waypoint Youth & Community Center
   </div>
 </footer>
