remove home url

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container text-center text-md-left">
     <div class="row">
       <div class="col-lg-8">
-        <a class="navbar-brand" routerLink="/home">
+        <a class="navbar-brand" routerLink="">
           <img class="img-fluid w-100" src=".../../assets/images/Waypoint-Brand-White.png">
         </a>
         <div class="white-text">
@@ -33,7 +33,7 @@
         <h5 class="text-uppercase mb-4 mt-3 font-weight-bold white-text">Navigate</h5>
         <ul class="list-unstyled">
           <li>
-            <a routerLink="/home" class="white-text">Home</a>
+            <a routerLink="" class="white-text">Home</a>
           </li>
           <li>
             <a routerLink="/events" class="white-text">Events</a>
