--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="col-8 col-md-4" routerLink="/home" style="padding: 0;">
+  <a class="col-8 col-md-4" routerLink="" style="padding: 0;">
     <img class="img-fluid" src=".../../assets/images/Waypoint-Brand.png">
   </a>
   <button class="navbar-toggler" type="button" aria-controls="navbarNav" aria-expanded="false"
@@ -9,7 +9,7 @@
   <div class="navbar-collapse collapse" id="navbarNav" [ngbCollapse]="isCollapsed">
     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/home">Home</a>
+        <a class="nav-link" routerLink="">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/events">Events</a>
