--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -29,7 +29,7 @@
         </div>
       </div>
       <hr class="clearfix w-100 d-lg-none">
-      <div class="col-lg-4 float-right">
+      <div class="col-lg-2 float-right">
         <h5 class="text-uppercase mb-4 mt-3 font-weight-bold white-text">Navigate</h5>
         <ul class="list-unstyled">
           <li>
@@ -44,6 +44,15 @@
           <li>
             <a href="https://squareup.com/store/waypoint-youth-and-community-center" target="_blank" class="white-text">Donate</a>
           </li>
+        </ul>
+      </div>
+      <hr class="clearfix w-100 d-lg-none">
+      <div class="col-lg-2 float-right">
+        <h5 class="text-uppercase mb-4 mt-3 font-weight-bold white-text">Hours</h5>
+        <ul class="list-unstyled text-white">
+          <li>Lunch: 12-1pm</li>
+          <li>Activity: 1-2:30pm</li>
+          <li>Free Time: 2:30-4pm</li>
         </ul>
       </div>
     </div>
