New phone number. Add Summer hours details

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="page-footer font-small pt-4">
   <div class="container text-center text-md-left">
     <div class="row">
-      <div class="col-lg-8">
+      <div class="col-lg-6">
         <a class="navbar-brand" routerLink="">
           <img class="img-fluid w-100" src=".../../assets/images/Waypoint-Brand-White.png">
         </a>
@@ -14,10 +14,10 @@
           </a>
         </div>
         <div class="white-text">
-          <a href="tel:+1-412-519-3352">
+          <a href="tel:+1-724-633-2050">
             <div class="btn btn-floating btn-sm btn-phone rounded-circle white-text">
               <i class="fas fa-phone footer-icon"></i>
-            </div> (412)-519-3352
+            </div> (724)-633-2050
           </a>
         </div>
         <div class="white-text">
@@ -29,7 +29,7 @@
         </div>
       </div>
       <hr class="clearfix w-100 d-lg-none">
-      <div class="col-lg-2 float-right">
+      <div class="col-lg-3 float-right">
         <h5 class="text-uppercase mb-4 mt-3 font-weight-bold white-text">Navigate</h5>
         <ul class="list-unstyled">
           <li>
@@ -47,9 +47,10 @@
         </ul>
       </div>
       <hr class="clearfix w-100 d-lg-none">
-      <div class="col-lg-2 float-right">
-        <h5 class="text-uppercase mb-4 mt-3 font-weight-bold white-text">Hours</h5>
+      <div class="col-lg-3 float-right">
+        <h5 class="text-uppercase mb-4 mt-3 font-weight-bold white-text">Summer Hours</h5>
         <ul class="list-unstyled text-white">
+          <li>Tuesday's & Thursday's</li>
           <li>Lunch: 12-1pm</li>
           <li>Activity: 1-2:30pm</li>
           <li>Free Time: 2:30-4pm</li>
