Change footer email

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -21,10 +21,10 @@
           </a>
         </div>
         <div class="white-text">
-          <a href="mailto:info@waypointcommunitycenter.org">
+          <a href="mailto:contact@waypointcommunitycenter.org">
             <div class="btn btn-floating btn-sm btn-email rounded-circle white-text">
               <i class="far fa-envelope footer-icon"></i>
-            </div> info@waypointcommunitycenter.org
+            </div> contact@waypointcommunitycenter.org
           </a>
         </div>
       </div>
