Clean up image heights

--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,11 +1,13 @@
 <section id="eventsHeader">
-  <div class="events-header-image text-center">
-    <img class="img-fluid" src=".../../assets/images/group-outdoor-wall.png" style="filter: brightness(65%);">
-    <div class="container events-header-content">
-      <h3 class="header-white dynamic-header">Upcoming Events</h3>
-      <hr class="hr-slim-white" style="margin-top: 0;">
-      <p class="white-text dynamic-paragraph">Below is an interactive calendar that shows all of our upcoming events. You can click on an event to find out more
-        about it.</p>
+  <div class="container-fluid">
+    <div class="events-header-image text-center">
+      <div id="eventsHeaderImage"></div>
+      <div class="container events-header-content">
+        <h3 class="header-white dynamic-header">Upcoming Events</h3>
+        <hr class="hr-slim-white" style="margin-top: 0;">
+        <p class="white-text dynamic-paragraph">Below is an interactive calendar that shows all of our upcoming events. You can click on an event to find out more
+          about it.</p>
+      </div>
     </div>
   </div>
 </section>
