--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,10 +39,12 @@
 </section>
 
 <section id="meetTheTeam">
-  <div class="meet-team-container text-center">
-    <img src=".../../assets/images/group-outdoor.png" class="img-fluid">
-    <a routerLink="/team">
-      <button class="btn meet-team-btn">Meet the Team</button>
-    </a>
+  <div class="container-fluid">
+    <div class="meet-team-container text-center">
+      <div id="teamHeaderImage"></div>
+      <a routerLink="/team">
+        <button class="btn meet-team-btn">Meet the Team</button>
+      </a>
+    </div>
   </div>
 </section>
