--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -1,10 +1,12 @@
 <section id="meetTheTeamHeader">
-  <div class="team-header-image text-center">
-    <img class="img-fluid" src=".../../assets/images/group-indoor.png" style="filter: brightness(65%);">
-    <div class="container team-header-content">
-      <h3 class="header-white dynamic-header">Meet Our Team</h3>
-      <hr class="hr-slim-white" style="margin-top: 0;">
-      <p class="white-text dynamic-paragraph">At the heart of Waypoint are those who serve. Here are a few of those who have dedicated their lives to this mission.</p>
+  <div class="container-fluid">
+    <div class="team-header-image text-center">
+      <div id="teamHeaderImage"></div>
+      <div class="container team-header-content">
+        <h3 class="header-white dynamic-header">Meet Our Team</h3>
+        <hr class="hr-slim-white" style="margin-top: 0;">
+        <p class="white-text dynamic-paragraph">At the heart of Waypoint are those who serve. Here are a few of those who have dedicated their lives to this mission.</p>
+      </div>
     </div>
   </div>
 </section>
@@ -51,7 +53,8 @@
             <p>Brigid lives in Forward Township, PA with her husband, Dean. She works part-time as a custom watercolor illustrator
               and a volunteer coordinator at the youth center. Brigid is a vocalist as well as the Social Media Director
               of Waypoint Worship, and is a member of the worship team at House of Faith, which has been her church for 21
-              years.</p>
+              years.
+            </p>
           </div>
         </div>
         <div class="col-12 col-md-3" style="margin-top: 50px;">
