--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -4,6 +4,7 @@
   background-attachment: fixed;
   background-position: 25% 25%;
   background-size: cover;
+  background-attachment: scroll;
   filter: brightness(65%);
   height: 100%;
 }
