--- a/src/app/team/team.component.css
+++ b/src/app/team/team.component.css
@@ -26,7 +26,12 @@
   background-attachment: fixed;
   background-position: 50% 50%;
   background-size: cover;
-  background-attachment: scroll;
   filter: brightness(65%);
   height: 100%;
+}
+
+@media (max-width: 576px) {
+  #teamHeaderImage {
+    background-attachment: scroll;
+  }
 }
