--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -39,7 +39,12 @@
   background-attachment: fixed;
   background-position: top;
   background-size: cover;
-  background-attachment: scroll;
   filter: brightness(65%);
   height: 100%;
+}
+
+@media (max-width: 576px) {
+  #teamHeaderImage {
+    background-attachment: scroll;
+  }
 }
