--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -50,7 +50,7 @@
       <div class="col-lg-3 float-right">
         <h5 class="text-uppercase mb-4 mt-3 font-weight-bold white-text">Summer Hours</h5>
         <ul class="list-unstyled text-white">
-          <li>Tuesday's & Thursday's</li>
+          <li>Tuesday, Wednesday, Thursday</li>
           <li>Lunch: 12-1pm</li>
           <li>Activity: 1-2:30pm</li>
           <li>Free Time: 2:30-4pm</li>
