--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -51,9 +51,10 @@
         <h5 class="text-uppercase mb-4 mt-3 font-weight-bold white-text">Summer Hours</h5>
         <ul class="list-unstyled text-white">
           <li>Tuesday, Wednesday, Thursday</li>
-          <li>Lunch: 12-1pm</li>
-          <li>Activity: 1-2:30pm</li>
-          <li>Free Time: 2:30-4pm</li>
+          <li>Welcome: 2:30-3:30pm</li>
+          <li>Homework Hour: 3:30-4:30pm</li>
+          <li>Activity: 4:30-5:30pm</li>
+          <li>Free Time: 5:30-6:30pm</li>
         </ul>
       </div>
     </div>
