Change hours heading

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -48,7 +48,7 @@
       </div>
       <hr class="clearfix w-100 d-lg-none">
       <div class="col-lg-3 float-right">
-        <h5 class="text-uppercase mb-4 mt-3 font-weight-bold white-text">Summer Hours</h5>
+        <h5 class="text-uppercase mb-4 mt-3 font-weight-bold white-text">Hours</h5>
         <ul class="list-unstyled text-white">
           <li>Tuesday, Wednesday, Thursday</li>
           <li>Welcome: 2:30-3:30pm</li>
