--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -19,6 +19,39 @@
   -ms-transform: translate(-50%, -50%);
 }
 
+.video-container {
+  position: relative;
+  z-index: -1;
+  overflow: hidden;
+}
+
+.video-container #header-video {
+  height: auto;
+  vertical-align: middle;
+  width: 100%;
+}
+
+.video-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+}
+
+.overlay-text {
+  letter-spacing: .1rem;
+  background-color: rgba(0, 0, 0, 0.4);
+  border: 1px solid hsla(0, 0%, 100%, .5);
+  padding: 1rem;
+  text-transform: uppercase;
+  margin: 0;
+}
+
 @media (max-width: 767px) {
   .meet-team-container .btn {
     top: 50%;
