--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -21,35 +21,64 @@
 
 .video-container {
   position: relative;
-  z-index: -1;
-  overflow: hidden;
+  width: 100%;
+  height: 620px;
 }
 
-.video-container #header-video {
+.video-wrapper {
+  position: absolute;
+  z-index: -1;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  right: 0px;
+  overflow: hidden;
+  background-size: cover;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-image: none;
+}
+
+.video-wrapper video {
+  margin: auto;
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  visibility: visible;
+  opacity: 1;
+  width: 3440px;
   height: auto;
-  vertical-align: middle;
-  width: 100%;
 }
 
 .video-overlay {
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  width: 100%;
+  display: -ms-flexbox;
   display: flex;
+  top: 0;
+  left: 0;
+  height: 100%;
+  -ms-flex-align: center;
   align-items: center;
+  -ms-flex-pack: center;
   justify-content: center;
-  padding: 1rem;
+  padding: 2rem;
 }
 
 .overlay-text {
+  background-color: rgba(0, 0, 0, .4);
   letter-spacing: .1rem;
-  background-color: rgba(0, 0, 0, 0.4);
+  font-weight: 300;
   border: 1px solid hsla(0, 0%, 100%, .5);
   padding: 1rem;
+  font-weight: 100;
   text-transform: uppercase;
+  color: #fff;
   margin: 0;
+  text-align: center;
 }
 
 @media (max-width: 767px) {
