--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,14 @@
 <section id="videoSection" *ngIf="mobile">
   <div class="video-container">
-    <video id="header-video" loop autoplay muted oncontextmenu="return false">
-      <source src="../../assets/images/header-video.mp4" type="video/mp4">
-    </video>
+    <div class="video-wrapper">
+      <video autoplay loop muted>
+        <source src="../../assets/images/header-video.mp4" type="video/mp4">
+      </video>
+    </div>
     <div class="video-overlay text-center">
-      <h1 class="overlay-text text-white">Waypoint Youth & Community Center</h1>
+      <div>
+        <h1 class="overlay-text text-white">Waypoint Youth & Community Center</h1>
+      </div>
     </div>
   </div>
 </section>
