Auto play fix. Layout change for video header. Added webm source.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,10 @@
 <section id="videoSection" *ngIf="mobile">
   <div class="video-container">
     <div class="video-wrapper">
-      <video autoplay loop muted>
-        <source src="../../assets/images/header-video.mp4" type="video/mp4">
+      <video autoplay loop muted oncanplay="this.play()" onloadedmetadata="this.muted = true">
+        <source src="../../assets/video/header-video.mp4" type="video/mp4">
+        <source src="../../assets/video/header-video.webm" type="video/webm">
+        <p>This browser does not support the video element.</p>
       </video>
     </div>
     <div class="video-overlay text-center">
