Add Camp Program page

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,15 +13,15 @@
             </div> 115 South 2nd St. West Newton, PA 15089
           </a>
         </div>
-        <div class="white-text">
-          <a href="tel:+1-724-633-2050">
+        <div>
+          <a href="tel:+1-724-633-2050" class="white-text">
             <div class="btn btn-floating btn-sm btn-phone rounded-circle white-text">
               <i class="fas fa-phone footer-icon"></i>
             </div> (724)-633-2050
           </a>
         </div>
-        <div class="white-text">
-          <a href="mailto:contact@waypointcommunitycenter.org">
+        <div>
+          <a href="mailto:contact@waypointcommunitycenter.org" class="white-text">
             <div class="btn btn-floating btn-sm btn-email rounded-circle white-text">
               <i class="far fa-envelope footer-icon"></i>
             </div> contact@waypointcommunitycenter.org
@@ -40,6 +40,9 @@
           </li>
           <li>
             <a routerLink="/team" class="white-text">Meet the Team</a>
+          </li>
+          <li>
+            <a routerLink="/camp" class="white-text">Camp Program</a>
           </li>
           <li>
             <a href="https://squareup.com/store/waypoint-youth-and-community-center" target="_blank" class="white-text">Donate</a>
