--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,6 +18,9 @@
         <a class="nav-link" routerLink="/team">Meet the Team</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" routerLink="/camp">Camp Program</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="https://squareup.com/store/waypoint-youth-and-community-center" target="_blank">Donate</a>
       </li>
     </ul>
