Update camp page

--- a/src/app/camp-program/camp-program.component.html
+++ b/src/app/camp-program/camp-program.component.html
@@ -34,9 +34,14 @@
             Waypoint's 2020
             summer camp program. Cannot wait to see you there!
           </p>
-          <b>
-            After filling out the form, please submit a payment of $65 at our
-            <a href="https://waypoint-youth-and-community-center.square.site/" target="_blank">Donation Page</a>.</b>
+          <p>
+            <b>
+              After filling out the form, please submit a payment of $65 at our
+              <a href="https://waypoint-youth-and-community-center.square.site/" target="_blank">Donation Page</a>.</b>
+          </p>
+          <p>
+            <b>If you would like to sponsor a kid to participate in Waypoint's Camp Program, please submit a payment of $65.</b>
+          </p>
           <hr>
           <h3 class="header-dark">Calendar</h3>
           <img class="img-fluid" src="../../assets/images/july-camp-calendar.jpg">
