--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -41,9 +41,9 @@
           <li>
             <a routerLink="/team" class="white-text">Meet the Team</a>
           </li>
-          <li>
+          <!-- <li>
             <a routerLink="/camp" class="white-text">Camp Program</a>
-          </li>
+          </li> -->
           <li>
             <a href="https://squareup.com/store/waypoint-youth-and-community-center" target="_blank" class="white-text">Donate</a>
           </li>
@@ -54,10 +54,11 @@
         <h5 class="text-uppercase mb-4 mt-3 font-weight-bold white-text">Hours</h5>
         <ul class="list-unstyled text-white">
           <li>Tuesday, Wednesday, Thursday</li>
-          <li>Welcome: 2:30-3:30pm</li>
-          <li>Homework Hour: 3:30-4:30pm</li>
-          <li>Activity: 4:30-5:30pm</li>
-          <li>Free Time: 5:30-6:30pm</li>
+          <li>2:30-4:00pm Welcome/Free Time</li>
+          <li>4:00-4:30pm Homework Help</li>
+          <li>4:30pm-5:00pm Dinner</li>
+          <li>5:00-6:00pm Activity</li>
+          <li>6:00-6:30pm Connections/Free Time</li>
         </ul>
       </div>
     </div>
