--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -5,7 +5,8 @@
       <div class="container team-header-content">
         <h3 class="header-white dynamic-header">Meet Our Team</h3>
         <hr class="hr-slim-white" style="margin-top: 0;">
-        <p class="white-text dynamic-paragraph">At the heart of Waypoint are those who serve. Here are a few of those who have dedicated their lives to this mission.</p>
+        <p class="white-text dynamic-paragraph">At the heart of Waypoint are those who serve. Here are a few of those
+          who have dedicated their lives to this mission.</p>
       </div>
     </div>
   </div>
@@ -22,11 +23,12 @@
           <div class="text-center text-md-left align-self-center">
             <h5 class="avatar-name">Chris Morse</h5>
             <p class="avatar-occupation">Executive Director</p>
-            <p>Chris lives with his wife, Pam, and son, Declan, in Forward Township, PA. He has been serving as the worship
-              leader and the Creative Arts Director at House of Faith in West Newton, PA for the past 17 years, and was just
-              recently ordained as an Associate Pastor there. He worked as a carpenter for 25 years until God called him
-              into full-time ministry. He is also the Director of Worship for the Coalition of Fellowship. Chris heads up
-              Waypoint Worship, has a mentoring group of 21 young adults, and works day-to-day at the youth center.</p>
+            <p>
+              Chris lives with his wife, Pam, in Forward Township, PA. He has been serving as the worship leader and the Creative Arts Director
+              at House of Faith in West Newton, PA for the past 20 years, and also is an Associate Pastor there. He worked as a carpenter
+              for 25 years until God called him into full-time ministry. He is also the Director of Worship for the Coalition of Fellowship.
+              Chris heads up Waypoint Worship, has a mentoring group of 21 young adults, and works day-to-day at the youth center.
+            </p>
           </div>
         </div>
         <div class="col-12 col-md-3" style="margin-top: 50px;">
@@ -36,37 +38,91 @@
           <div class="text-center text-md-left align-self-center">
             <h5 class="avatar-name">Pam Morse</h5>
             <p class="avatar-occupation">President</p>
-            <p>Pam lives in Forward Township, PA with her husband, Chris, and son, Declan. Pam works full time at PricewaterhouseCoopers
-              as a Director in the Wealth Management Tax Services group. She has dedicated all of her free time to ministry,
-              the youth center, and is a mentor alongside her husband to 21 young adults.</p>
+            <p>
+              Pam lives in Forward Township, PA with her husband, Chris. Pam works full time at PricewaterhouseCoopers as
+              a Director in the Wealth Management Tax Services group. She is always at Waypoint events, and is a mentor alongside
+              her husband to 21 young adults.
+            </p>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-12 col-md-3" style="margin-top: 50px;">
-          <img class="img-fluid rounded-circle float-left" src=".../../assets/images/meet-the-team-brigid.png">
+          <img class="img-fluid rounded-circle float-left" src=".../../assets/images/meet-the-team-justin.png">
         </div>
         <div class="col-12 col-md-3 justify-content-center" style="margin-top: 50px;">
           <div class="text-center text-md-left align-self-center">
-            <h5 class="avatar-name">Brigid Kolenc</h5>
-            <p class="avatar-occupation">Executive Coordinator</p>
-            <p>Brigid lives in Forward Township, PA with her husband, Dean. She works part-time as a custom watercolor illustrator
-              and a volunteer coordinator at the youth center. Brigid is a vocalist as well as the Social Media Director
-              of Waypoint Worship, and is a member of the worship team at House of Faith, which has been her church for 21
-              years.
+            <h5 class="avatar-name">Justin Lowanse</h5>
+            <p class="avatar-occupation">Community Liaison</p>
+            <p>
+              Justin Lowanse lives in West Newton, PA. Justin works full time at Bella Construction as a Sales Representative
+              but has dedicated all of his free time to Waypoint. Justin is a reliable leader, not only at Waypoint but also
+              in West Newton. He is a passionate, hard worker and a great ally to the Waypoint team.
             </p>
           </div>
         </div>
         <div class="col-12 col-md-3" style="margin-top: 50px;">
-          <img class="img-fluid rounded-circle float-left" src=".../../assets/images/meet-the-team-jared.png">
+          <img class="img-fluid rounded-circle float-left" src=".../../assets/images/meet-the-team-jalena.png">
         </div>
         <div class="col-12 col-md-3 justify-content-center" style="margin-top: 50px;">
           <div class="text-center text-md-left align-self-center">
-            <h5 class="avatar-name">Jared Roll</h5>
-            <p class="avatar-occupation">Secretary</p>
-            <p>Jared lives in West Newton, PA, just down the road from the youth center. Jared's heart is serving the young,
-              whether in the Dominican Republic, or just in town. He works full-time, and spends his free time as a youth
-              leader for Bible Alliance Church.</p>
+            <h5 class="avatar-name">Jalena Morse</h5>
+            <p class="avatar-occupation">Program Coordinator</p>
+            <p>
+              Jalena lives in West Newton, PA with her husband, Declan. She moved from South Dakota in January, 2021
+              to be a part of Waypoint and the community of West Newton. She works as the Program Coordinator
+              of Waypoint and serves on the worship team at House of Faith.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-3" style="margin-top: 50px;">
+          <img class="img-fluid rounded-circle float-left" src=".../../assets/images/meet-the-team-declan.png">
+        </div>
+        <div class="col-12 col-md-3 justify-content-center" style="margin-top: 50px;">
+          <div class="text-center text-md-left align-self-center">
+            <h5 class="avatar-name">Declan Morse</h5>
+            <p class="avatar-occupation">Executive Coordinator</p>
+            <p>
+              Declan lives in West Newton, PA with his wife Jalena. Declan has been working at Waypoint since 2018
+              and moved to West Newton in 2020. He works as the Executive Coordinator of Waypoint and serves on the
+              worship team at House of Faith.
+            </p>
+          </div>
+        </div>
+        <div class="col-12 col-md-3" style="margin-top: 50px;">
+          <img class="img-fluid rounded-circle float-left" src=".../../assets/images/meet-the-team-mallory.png">
+        </div>
+        <div class="col-12 col-md-3 justify-content-center" style="margin-top: 50px;">
+          <div class="text-center text-md-left align-self-center">
+            <h5 class="avatar-name">Mallory Crawford</h5>
+            <p class="avatar-occupation">Dietary Coordinator</p>
+            <p>
+              Mallory lives in West Newton, PA with her husband Joseph and their two dogs. She is passionate about the
+              importance of the
+              community and sharing ideas over a good meal. When not at Waypoint, you can find her working at the local
+              brewery or next door
+              to the Outpost and volunteering with Downtown West Newton Inc.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-3" style="margin-top: 50px;">
+          <img class="img-fluid rounded-circle float-left" src=".../../assets/images/meet-the-team-gloria.png">
+        </div>
+        <div class="col-12 col-md-3 justify-content-center" style="margin-top: 50px;">
+          <div class="text-center text-md-left align-self-center">
+            <h5 class="avatar-name">Gloria Walden</h5>
+            <p class="avatar-occupation">Dietary Coordinator</p>
+            <p>
+              Gloria lives in Liberty Boro, PA with her husband Carl. She has been a kitchen mom for Waypoint since
+              2018. She worked as a
+              Respiratory Therapist for 22 years at Forbes Regional Hospital and is now retired. She also was a youth
+              leader in her late 20's.
+              She has two boys, Luke and Clay.
+            </p>
           </div>
         </div>
       </div>
